--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
 #muscatconversion ul.previousnextlinks li {display: inline; margin: 0; padding: 0;}
 #muscatconversion ul.previousnextlinks li a {border: 0;}
 #muscatconversion div.marc {overflow-x: scroll;}
-#muscatconversion div.marc strong {color: #603; font-weight: normal; background-color: #ddd; opacity: 0.7;}
+#muscatconversion div.marc strong, #muscatconversion table.reportlisting strong {color: #603; font-weight: normal; background-color: #ddd; opacity: 0.7;}
 #muscatconversion #form_definition {font-family: Lucida Console, courier, monospace; line-height: 1.5em; padding: 10px;}
 #muscatconversion ul.downloads li a {font-weight: bold; width: 18em;}
 #muscatconversion img.extension.file-txt {display: none;}
