--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,8 @@
 #muscatconversion p#exporttarget {text-align: right;}
 #muscatconversion p#exporttarget strong {border: 1px solid #ddd; padding: 2px;}
 #muscatconversion span.spelling {text-decoration: underline wavy red;}	/* In Chrome, requires "Enable experimental Web Platform features" in about://flags */
+#muscatconversion form#spellcheck {text-align: right;}
+#muscatconversion form#spellcheck input[type='number'] {width: 60px;}
 
 /* Print styles */
 @media print {
