--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,9 @@
 #muscatconversion ul.previousnextlinks li a {border: 0;}
 #muscatconversion div.marc {overflow-x: scroll;}
 #muscatconversion div.marc pre strong, #muscatconversion table.reportlisting strong {color: #603; font-weight: normal; background-color: #ddd; opacity: 0.7;}
-#muscatconversion table.reports tr td {background-color: #f7f7f7;}
-#muscatconversion table.reports tr.info td {background-color: white;}
+#muscatconversion table.reports tr td {background-color: white;}
+#muscatconversion table.reports tr.info td {background-color: #f7f7f7;}
+#muscatconversion table.reports tr.problem td {background-color: #fcc7c8;}
 #muscatconversion #form_definition {font-family: Lucida Console, courier, monospace; line-height: 1.5em; padding: 10px;}
 #muscatconversion ul.downloads li a {font-weight: bold; width: 18em;}
 #muscatconversion img.extension.file-txt {display: none;}
