--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@
 #muscatconversion span.spelling {text-decoration: underline wavy red;}	/* In Chrome, requires "Enable experimental Web Platform features" in about://flags */
 #muscatconversion form#spellcheck {text-align: right;}
 #muscatconversion form#spellcheck input[type='number'] {width: 60px;}
+#muscatconversion p.jumplist {margin-bottom: 2.5em;}
 
 /* Print styles */
 @media print {
