Merging: Show source in listing

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,9 @@
 #muscatconversion table.downloads td a {display: block; border: 1px solid #ddd; padding: 4px 8px 4px 28px; border-radius: 5px; height: 3.5em; background-color: #f7f7f7; background-position: 8px 8px; min-width: 5em;}
 #muscatconversion a[href$='.mrk']  {padding-left: 20px; background: transparent url(/images/icons/page_white_code.png) no-repeat center left;}
 #muscatconversion a[href$='.mrc']  {padding-left: 20px; background: transparent url(/images/icons/script_code_red.png) no-repeat center left;}
+#muscatconversion p.colourkey {float: right; margin-right: 20px; color: #999;}
+#muscatconversion span.sourcem {color: #191970;}
+#muscatconversion span.sourcev {color: brown;}
 
 /* Print styles */
 @media print {
