--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@
 #muscatconversion span.sourcev {color: brown;}
 #muscatconversion table td span.present {background-color: rgba(227, 249, 217, 0.7);}
 #muscatconversion table td span.absent {background-color: rgba(252, 199, 200, 0.7);}
+#muscatconversion table td span.probable {background-color: rgba(255,255, 153, 0.7);}
 
 /* Print styles */
 @media print {
