--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@
 #muscatconversion table td span.present {background-color: rgba(227, 249, 217, 0.7);}
 #muscatconversion table td span.absent {background-color: rgba(252, 199, 200, 0.7);}
 #muscatconversion table td span.probable {background-color: rgba(255,255, 153, 0.7);}
+#muscatconversion table.tests td, #muscatconversion table.tests th {padding-right: 10px;}
+#muscatconversion table.tests span.found {background-color: rgb(200, 255, 200);}
 
 /* Print styles */
 @media print {
