On test screen, add button to regenerate all MARC records in test system

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@
 #muscatconversion ul.orderby li a.selected {background-color: #eee; border-color: gray;}
 #muscatconversion ul.orderby li a:hover {text-decoration: none; background-color: #eee;}
 #muscatconversion #filters select {width: 100px;}
+#muscatconversion #regenerate {text-align: right;}
 
 /* Print styles */
 @media print {
