--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,9 @@
 #muscatconversion ul.orderby li a:hover {text-decoration: none; background-color: #eee;}
 #muscatconversion #filters select {width: 100px;}
 #muscatconversion #regenerate {text-align: right;}
+#muscatconversion table.periodicalpamgrouped td:first-child {width: 6em;}
+#muscatconversion table.periodicalpamgrouped td:nth-child(2) {width: 35em;}
+#muscatconversion table.periodicalpamgrouped td:last-child {width: 25em;}
 
 /* Print styles */
 @media print {
